# tede.v1

./: pytroch.ipynb
yolo26x-custom/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
yolo26x-custom/.github/workflows/: ci.yml
yolo26x-custom/configs/: dataset.yaml  model.yaml
yolo26x-custom/mlops/: __init__.py  api.py  experiment_tracker.py  export.py  model_registry.py  monitor.py
yolo26x-custom/src/: __init__.py  evaluate.py  predict.py  preprocess.py  train.py  utils.py
yolo26x-custom/tede/: __init__.py  __main__.py  api.py  cli.py  core.py  data.py  export.py  monitor.py  registry.py  tracking.py  utils.py
yolo26x-custom/tede/configs/: dataset.yaml  default.yaml
yolo26x-custom/tede/datasets/: __init__.py  transforms.py  yolo_dataset.py
yolo26x-custom/tede/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
yolo26x-custom/tede/nn/: __init__.py  model.py
yolo26x-custom/tede/ops/: __init__.py  boxes.py  metrics.py  nms.py
yolo26x-custom/tests/: test_framework.py  test_pipeline.py
