[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tede"
version = "0.2.0"
description = "TEDE — independent production-grade object detection framework built on PyTorch + torchvision."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "tedo001" }]
keywords = ["object-detection", "computer-vision", "mlops", "pytorch", "torchvision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.9.0",
    "pillow>=10.2.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
mlops = ["mlflow>=2.10.0", "dvc>=3.40.0"]
serving = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "python-multipart>=0.0.9"]
export = ["onnx>=1.15.0", "onnxruntime>=1.17.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.1.0",
]
all = [
    "mlflow>=2.10.0",
    "dvc>=3.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
]

[project.scripts]
tede = "tede.cli:main"

[project.urls]
Homepage = "https://github.com/tedo001/tede.v1"
Repository = "https://github.com/tedo001/tede.v1"
Issues = "https://github.com/tedo001/tede.v1/issues"

[tool.setuptools.packages.find]
include = ["tede*"]
exclude = ["tests*", "data*", "runs*", "model_registry*", "monitoring*", "mlruns*"]

[tool.setuptools.package-data]
tede = ["configs/*.yaml"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
